--- a/app/views/modals/_preregister_form.html.haml
+++ b/app/views/modals/_preregister_form.html.haml
@@ -4,7 +4,7 @@
     %button{:type=>"button", :class=>"close", :"data-dismiss"=>"modal"}
       ×
     %h3
-      Be part of it
+      Get involved
   .modal-body
     .preregister-form
       %p.popup-intro
