--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -52,7 +52,8 @@
     .well
       %h2
         %i.icon-zoom-in
-        Request radius
+        Neighbourhoods
       %ul.unstyled
+        %li=link_to "Edit/view neighbourhood areas", neighbourhoods_path  
         %li=link_to "Set maximum request radius", area_radius_maximums_path   
 
