--- a/app/views/neighbourhoods/show.html.haml
+++ b/app/views/neighbourhoods/show.html.haml
@@ -58,7 +58,12 @@
                     =need.description
                   -else
                     =need.category.description
-      =link_to "I'd like some help", '#sign-up-popup', :class=>"btn call-to-action primary", :"data-toggle"=>"modal"
+      
+     
+      -if current_user
+        =link_to "I'd like some help", new_need_path, :class=>"btn call-to-action primary"
+      -else              
+        =link_to "I'd like some help", '#sign-up-popup', :class=>"btn call-to-action primary", :"data-toggle"=>"modal"
 
     .span6
       %h2 Neighbours who need help
@@ -79,5 +84,9 @@
                     =need.description
                   -else
                     =need.category.description
-      =link_to "I'd like to offer some help", '#sign-up-popup', :class=>"btn call-to-action", :"data-toggle"=>"modal"
+                    
+      -if current_user
+        =link_to "I'd like to offer some help", needs_path, :class=>"btn call-to-action"
+      -else              
+        =link_to "I'd like to offer some help", '#sign-up-popup', :class=>"btn call-to-action", :"data-toggle"=>"modal"
       
