--- a/app/views/layouts/logged_out/_header.html.haml
+++ b/app/views/layouts/logged_out/_header.html.haml
@@ -14,8 +14,7 @@
           %li=link_to_slug('Latest news', :news, :class=>"intro-nav-link-latest intro-nav-link")
           
           %li=link_to "Login", "/login", :class=>"intro-nav-link-login intro-nav-link"
-    =link_to_slug(:help, :class=>"help-link") do
+    =link_to_slug(:safety_tips, :class=>"help-link") do
       %icon.icon-question-sign
-      Help
-          
+      Stay safe
           
