--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -13,6 +13,16 @@
         }
       });
     });
+
+-if @pre_registration    
+  .row
+    .span10.offset1.well.center
+      %h3
+        Congratulations
+        =@pre_registration.neighbourhood.name
+        is now live!
+      %p
+        =snippet_text(:congrats_live, "Please enter your details below so that you can start helping neighbours.")
 .row
   .span10.offset1
     %ul.nav.nav-tabs.nav-tabs-register
