--- a/app/views/neighbourhoods/show.html.haml
+++ b/app/views/neighbourhoods/show.html.haml
@@ -1,6 +1,8 @@
 =google_maps_javascript_include_tag if current_user
 -content_for :head do
   :javascript
+    user_lat = #{current_user ? "#{current_user.lat}" : "DEFAULT_LOCATION[0]"}
+    user_lng = #{current_user ? "#{current_user.lng}" : "DEFAULT_LOCATION[1]"}
     $(document).ready(function() {
       NeedSelect.init();
       NeedsMap.needs = #{@needs_json};
