Change text to "Address validated"

--- a/app/views/layouts/logged_in/_header.html.haml
+++ b/app/views/layouts/logged_in/_header.html.haml
@@ -68,9 +68,9 @@
               Account status
             %p.control-panel-subtitle
               -if current_user.validated?
-                Validated
+                Address validated
               -else
-                Not validated
+                Address not validated
           .span3
             =link_to user_needs_path(current_user), :class=>"control-panel-link" do
               %h3.control-panel-title
