--- a/app/views/user_mailer/admin_message.text.erb
+++ b/app/views/user_mailer/admin_message.text.erb
@@ -1,4 +1,4 @@
-Dear admin,
+Dearest admin,
 
 <%= @message%>
 
@@ -6,6 +6,6 @@ Dear admin,
   <%= key%>: <%= value%>
 <%end%>
 
-Your sincerely,
+Yours sincerely,
 
 The Neighbours Can Help Website
