Change validated email text, remove HTML version

--- a/app/views/user_mailer/validated.text.erb
+++ b/app/views/user_mailer/validated.text.erb
@@ -1,8 +1,21 @@
 Hi <%=@user.first_name%>,
 
-We're very pleased to tell you that you have been validated and can now use the whole site.
+Congratulations! We have now validated your address. Your region is live and you can now use all the current features on the Neighbours Can Help website. 
 
-Thanks,
+We would like to thank you for joining us in these very early days, and would ask you to please bear with us as we bring more features online and roll out to the wider Sheffield region. Neighbours Can Help is going live at different times in different streets, depending on when there are enough of neighbours online to help each other. Any help you can give by telling your friends and neighbours about Neighbours Can Help will be much appreciated!
 
-The <%=Settings.site_name%> team
-<%=Settings.site_url%>
+http://neighbourscanhelp.org.uk 
+
+Our Grand Sheffield Launch will later in the year when we will have an event at the Meadowhall Shopping Centre.
+
+Please feel free to contact us for any information and we thank you for any comments you give on our developing website.
+
+Thank you for your interest and we hope you enjoy the website!
+
+John, David, Rose and Ange
+The Neighbours Can Help Team
+
+0114 244 3623
+rose.woodfine@neighbourscanhelp.org.uk
+7 Brompton Road, Sheffield S9 2PA
+http://neighbourscanhelp.org.uk
