--- a/app/views/layouts/logged_out/_header.html.haml
+++ b/app/views/layouts/logged_out/_header.html.haml
@@ -12,6 +12,7 @@
           %li=link_to "Home", root_path, :class=>"intro-nav-link-home intro-nav-link"        
           %li=link_to_slug('About', :about, :class=>"intro-nav-link-about intro-nav-link")
           %li=link_to_slug('Latest news', :news, :class=>"intro-nav-link-latest intro-nav-link")
+          %li=link_to_slug("Help", :help, :class=> "intro-nav-link-help intro-nav-link")
           
           %li=link_to "Login", "/login", :class=>"intro-nav-link-login intro-nav-link"
     =link_to_slug(:safety_tips, :class=>"help-link") do
