--- a/app/views/layouts/logged_in/_header.html.haml
+++ b/app/views/layouts/logged_in/_header.html.haml
@@ -46,9 +46,10 @@
                   %icon.icon-signout
                   =t(:logout)  
         %ul.nav.nav-intro.unstyled                
-          %li=link_to "Home", root_path, :class=>"intro-nav-link-home intro-nav-link"        
+          %li=link_to "Home", root_path, :class=>"intro-nav-link-home intro-nav-link"
           %li=link_to_slug('About', :about, :class=>"intro-nav-link-about intro-nav-link")
-          %li=link_to_slug('Latest news', :news, :class=>"intro-nav-link-latest intro-nav-link")                            
+          %li=link_to_slug('Latest news', :news, :class=>"intro-nav-link-latest intro-nav-link")
+          %li=link_to_slug("Help", :help, :class=> "intro-nav-link-help intro-nav-link")
     =link_to_slug(:safety_tips, :class=>"help-link") do
       %icon.icon-question-sign
       Stay safe
