--- a/app/views/needs/new.html.haml
+++ b/app/views/needs/new.html.haml
@@ -1,6 +1,6 @@
 .help-box.span8.offset2
   %h2.mt-3=title 'Add a request for help'
-  -if @need.category.present?
+  -if @need.category.present? && @need.category.sub_categories.count.zero?
     %p="Ok, so you need help with \"#{@need.category}\"."
     %p Please give more description of what help you need and then press 'Send'.
   -else
