--- a/app/views/layouts/logged_in/_body.html.haml
+++ b/app/views/layouts/logged_in/_body.html.haml
@@ -9,5 +9,7 @@
     =render('modals/address_prompt')
   -elsif params[:modal]=="validation_prompt"
     =render('modals/validation_prompt')
+  -elsif params[:modal]=="new_need_not_validated"
+    =render('modals/new_need_not_validated')
   .footer-wrapper
     =render("layouts/footer")
