Disable postcode field on registration form

--- a/app/views/registrations/steps/_where_you_live.html.haml
+++ b/app/views/registrations/steps/_where_you_live.html.haml
@@ -6,5 +6,5 @@
   =form.input :house_number, :label => "Number", :required => false, :input_html => {:placeholder => "34", :class => "span1"}, :help => "Please enter your house number or house name."
   =form.input :street_name, :label => "Street name", :required => false, :input_html => {:placeholder => "Street name", :class => "span4"}, :help => "We will only show your address to people that want to help you."
   =form.input :city, :label => false, :required => false, :input_html => {:placeholder => "Town/city", :value => @user.city}
-  =form.input :postcode, :label => false, :required => false, :input_html => {:placeholder => "Postcode", :class => "span2"}
+  =form.input :postcode, :label => false, :required => false, :input_html => {:placeholder => "Postcode", :class => "span2", :disabled => true}
   =form.input :phone, :label => "Phone number <br /><em class='optional'>(optional)</em>".html_safe, :required => false, :input_html => {:placeholder => "e.g. 0114 123123"}, :help => "This is optional but will help if we need to contact you. We promise to keep this private."
