--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -107,7 +107,8 @@
 .row
   .span12
     =options_panel do
-      =link_if_can("Remove this request", @request, :method => :delete, :confirm => "Are you sure?", :class => "btn btn-danger")
+      -unless @need.removed?
+        =link_if_can("Remove this request", @need, :method => :delete, :confirm => "Are you sure?", :class => "btn btn-danger")
       -if current_user
         =link_to("#inappropriate", :data => {:toggle => "modal"}) do
           %i.icon-warning-sign
