--- a/app/views/neighbourhoods/show.html.haml
+++ b/app/views/neighbourhoods/show.html.haml
@@ -63,7 +63,7 @@
       
      
       -if current_user
-        =link_to "I'd like some help", new_need_path, :class=>"btn call-to-action primary"
+        =link_to "I'd like some help", "/wireframes/need", :class=>"btn call-to-action primary"
       -else              
         =link_to "I'd like some help", '#sign-up-popup', :class=>"btn call-to-action primary", :"data-toggle"=>"modal"
 
@@ -88,7 +88,7 @@
                     =need.category.description
                     
       -if current_user
-        =link_to "I'd like to offer some help", needs_path, :class=>"btn call-to-action"
+        =link_to "I'd like to offer some help", "/wireframes/offer", :class=>"btn call-to-action"
       -else              
         =link_to "I'd like to offer some help", '#sign-up-popup', :class=>"btn call-to-action", :"data-toggle"=>"modal"
       
