--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -3,58 +3,75 @@
     %h1
       %i.icon-cogs
       =title "Admin"
-.row
-  .span4
-    .well
-      %h2
-        %i.icon-group
-        Users
-      %ul.unstyled
-        %li=link_to "Manage users", users_path
-        %li=link_to "Users map", map_users_path
-  .span4        
-    .well
-      %h2
-        %i.icon-tags
-        Categories
-      %ul.unstyled
-        %li=link_to "Manage need categories", need_categories_path
-  .span4        
-    .well
-      %h2
-        %i.icon-dashboard
-        Analytics
-      %ul.unstyled
-        %li=link_to "View search queries", searches_path
-.row
-  .span4
-    .well
-      %h2
-        %i.icon-warning-sign
-        Inappropriate content
-      %ul.unstyled
-        %li=link_to "View inappropriate content", flags_path
-  .span4
-    .well
-      %h2
-        %i.icon-list
-        Site snippets
-      %ul.unstyled
-        %li=link_to "View snippets", snippets_path
-  .span4
-    .well
-      %h2
-        %i.icon-envelope-alt
-        Enquiries
-      %ul.unstyled
-        %li=link_to "View enquiries", enquiries_path
-  .span4
-    .well
-      %h2
-        %i.icon-zoom-in
-        Neighbourhoods
-      %ul.unstyled
-        %li=link_to "Preregistrations map", map_pre_registrations_path
-        %li=link_to "Edit/view neighbourhood areas", neighbourhoods_path  
-        %li=link_to "Set maximum request radius", area_radius_maximums_path   
+      
+-if current_user.is_neighbourhood_admin?      
+      
+  .row
+    .span4
+      .well
+        %h2
+          %i.icon-group
+          Users
+        %ul.unstyled
+          %li=link_to "Manage users", users_path          
+-else
+
+  .row
+    .span4
+      .well
+        %h2
+          %i.icon-group
+          Users
+        %ul.unstyled
+          %li=link_to "Manage users", users_path
+          %li=link_to "Users map", map_users_path          
+          
+        
+        
+        
+    .span4        
+      .well
+        %h2
+          %i.icon-tags
+          Categories
+        %ul.unstyled
+          %li=link_to "Manage need categories", need_categories_path
+    .span4        
+      .well
+        %h2
+          %i.icon-dashboard
+          Analytics
+        %ul.unstyled
+          %li=link_to "View search queries", searches_path
+  .row
+    .span4
+      .well
+        %h2
+          %i.icon-warning-sign
+          Inappropriate content
+        %ul.unstyled
+          %li=link_to "View inappropriate content", flags_path
+    .span4
+      .well
+        %h2
+          %i.icon-list
+          Site snippets
+        %ul.unstyled
+          %li=link_to "View snippets", snippets_path
+    .span4
+      .well
+        %h2
+          %i.icon-envelope-alt
+          Enquiries
+        %ul.unstyled
+          %li=link_to "View enquiries", enquiries_path
+    .span4
+      .well
+        %h2
+          %i.icon-zoom-in
+          Neighbourhoods
+        %ul.unstyled
+          %li=link_to "Preregistrations map", map_pre_registrations_path
+          %li=link_to "Edit/view neighbourhood areas", neighbourhoods_path  
+          %li=link_to "Set maximum request radius", area_radius_maximums_path   
 
