change snippet_text to neighbourhood_snippet_text

--- a/app/views/modals/_preregister_form.html.haml
+++ b/app/views/modals/_preregister_form.html.haml
@@ -8,7 +8,7 @@
   .modal-body
     .preregister-form
       %p.popup-intro
-        =snippet_text(:preregister_popup_intro, "Enter your details below to get involved.")
+        =neighbourhood_snippet_text(:preregister_popup_intro, "Enter your details below to get involved.")
       
         %form.form-horizontal
           .control-group              
