--- a/app/views/modals/_preregister_popup.html.haml
+++ b/app/views/modals/_preregister_popup.html.haml
@@ -13,7 +13,7 @@
       Get involved
     .modal-body
       %p.popup-intro
-        =snippet_text(:preregister_popup, "Here is some text explaining what happens next. This will be edited by John.")
+        =neighbourhood_snippet_text(:preregister_popup, "Here is some text explaining what happens next. This will be edited by John.")
         
       =link_to "Next >>", "#sign-up-popup-preregister", :class=>"cta-intro", :"data-toggle"=>"modal", :"data-dismiss"=>"modal"
     
