--- a/app/views/neighbourhoods/coming_soon.html.haml
+++ b/app/views/neighbourhoods/coming_soon.html.haml
@@ -38,7 +38,7 @@
         =@neighbourhood
         
       %p.mt-2
-        =snippet_text(:coming_soon_intro, "Here is some text that will be edited by John. This is the text shown at the top of all the coming soon areas. It will explain what it happening and what you can do next.")
+        =neighbourhood_snippet_text(:coming_soon_intro, "Here is some text that will be edited by John. This is the text shown at the top of all the coming soon areas. It will explain what it happening and what you can do next.")
     .preregister-share.span8.offset2.mb-2
       .well
         =render("share_buttons")
