--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -22,7 +22,7 @@
         =@pre_registration.neighbourhood.name
         is now live!
       %p
-        =snippet_text(:congrats_live, "Please enter your details below so that you can start helping neighbours.")
+        =neighbourhood_snippet_text(:congrats_live, "Please enter your details below so that you can start helping neighbours.")
 .row
   .span10.offset1
     %ul.nav.nav-tabs.nav-tabs-register
