--- a/app/views/registrations/steps/_who_you_are.html.haml
+++ b/app/views/registrations/steps/_who_you_are.html.haml
@@ -1,5 +1,5 @@
 %p.mb-3
-  =snippet_text(:reg_form_intro)
+  =neighbourhood_snippet_text(:reg_form_intro)
   =edit_snippet_link(:reg_form_intro)
 =form.inputs(:class => "form-horizontal") do
   =form.input :first_name, :required => false, :help => "Enter your first name", :input_html => {:placeholder => "e.g. John"}
