--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -86,7 +86,7 @@
                     =link_to "Maybe I can help", "#register-popup", :'data-toggle' => "modal",  :class => "btn btn-primary mb-2"
               -else
                 .row
-                  =snippet_text(:need_cannot_use, "Here is some text explaining why this page be cannot be used. This will be edited by John.")
+                  =neighbourhood_snippet_text(:need_cannot_use, "Here is some text explaining why this page be cannot be used. This will be edited by John.")
                 .row
                   =link_to "Get involved", "#sign-up-popup", :id=>"cta-3", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
               
