--- a/app/views/neighbourhoods/_share_buttons.html.haml
+++ b/app/views/neighbourhoods/_share_buttons.html.haml
@@ -1,11 +1,11 @@
 %p
   Share with friends to help grow the community
 
-=link_to "https://twitter.com/intent/tweet?url=#{url_encode("http://neighbourscanhelp.org.uk/about")}&text=#{url_encode(snippet_text(:twitter_share_text,"Spread the word and help your neighbours by signing up with this new website"))}:", :class=>"share-btn twitter-share-btn btn", :target=>"_new" do
+=link_to "https://twitter.com/intent/tweet?url=#{url_encode("http://neighbourscanhelp.org.uk/about")}&text=#{url_encode(neighbourhood_snippet_text(:twitter_share_text,"Spread the word and help your neighbours by signing up with this new website"))}:", :class=>"share-btn twitter-share-btn btn", :target=>"_new" do
   %i.icon-twitter
   Share on Twitter
 
-=link_to "https://www.facebook.com/dialog/feed?app_id=#{Settings.facebook_app_id}&description=#{url_encode(snippet_text(:facebook_share_text,"Spread the word and help your neighbours by signing up with this new website"))}&link=#{url_encode(request.url)}&name=#{url_encode(snippet_text(:facebook_share_title,"We have users in your area, but need more before we can launch"))}&redirect_uri=#{url_encode("http://neighbourscanhelp.org.uk/about")}", :class=>"share-btn facebook-share-btn btn", :target=>"_new" do
+=link_to "https://www.facebook.com/dialog/feed?app_id=#{Settings.facebook_app_id}&description=#{url_encode(neighbourhood_snippet_text(:facebook_share_text,"Spread the word and help your neighbours by signing up with this new website"))}&link=#{url_encode(request.url)}&name=#{url_encode(neighbourhood_snippet_text(:facebook_share_title,"We have users in your area, but need more before we can launch"))}&redirect_uri=#{url_encode("http://neighbourscanhelp.org.uk/about")}", :class=>"share-btn facebook-share-btn btn", :target=>"_new" do
   %i.icon-facebook
   Share on Facebook
  
