--- a/app/views/neighbourhoods/_unvalidated_map.html.haml
+++ b/app/views/neighbourhoods/_unvalidated_map.html.haml
@@ -8,7 +8,7 @@
 
     });
     setTimeout(function(){$('.intro-circle-icon').popover({placement:'bottom'})},1000);
-    setTimeout(function(){$('h3.home-where.home-intro-text').popover({placement:'bottom',   content:'#{escape_javascript(snippet_text(:mission_statement_extra))}#{edit_snippet_link(:mission_statement_extra)}', title:'#{escape_javascript(snippet_text(:mission_statement_extra_title))} #{edit_snippet_link(:mission_statement_extra_title)}'})},1000);
+    setTimeout(function(){$('h3.home-where.home-intro-text').popover({placement:'bottom',   content:'#{escape_javascript(neighbourhood_snippet_text(:mission_statement_extra))}#{edit_snippet_link(:mission_statement_extra)}', title:'#{escape_javascript(neighbourhood_snippet_text(:mission_statement_extra_title))} #{edit_snippet_link(:mission_statement_extra_title)}'})},1000);
 
 #home-intro.mb-2
   .home-intro-text
@@ -16,7 +16,7 @@
       %h2.home-welcome.home-intro-text
         ="Hi #{current_user}, welcome to Neighbours Can Help"
       %h3.home-where.home-intro-text
-        =snippet_text(:mission_statement)
+        =neighbourhood_snippet_text(:mission_statement)
         =edit_snippet_link(:mission_statement)
     -elsif current_user
       %h2.home-welcome.home-intro-text
@@ -26,7 +26,7 @@
       %h2.home-welcome.home-intro-text
         Welcome to Neighbours Can Help
       %h3.home-where.home-intro-text
-        =snippet_text(:mission_statement)
+        =neighbourhood_snippet_text(:mission_statement)
         =edit_snippet_link(:mission_statement)
 
   .intro-circles
