--- a/app/views/neighbourhoods/_form.html.haml
+++ b/app/views/neighbourhoods/_form.html.haml
@@ -1,6 +1,8 @@
 =semantic_form_for(@neighbourhood) do |form| 
   =form.inputs do
     =form.input :name, :input_html => {:class => "span6"}, :placeholder => "eg. Maltby or Carver Close"
+    -if current_user.yoomee_staff?
+      =form.input :permalink_path, :input_html => {:class => "span6"}
     =form.input :postcode_prefix, :label => "Postcode prefix (optional)" ,:input_html => {:class => "span3"}, :placeholder => "eg. S66 or S10 5DN"
     =form.input :admin, :collection => User.order([:first_name, :last_name]), :prompt => "Please select..."
     =form.input :live, :label => "Tick to make live" ,:as => :boolean
