Neighbourhood news pages

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1162,7 +1162,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
   height: 120px;
 }
 
-.controller_neighbourhoods .header-intro, .controller_needs .header-intro, .controller_offers .header-intro   {
+.controller_neighbourhoods.action_show  .header-intro, .controller_needs .header-intro, .controller_offers .header-intro   {
   margin-bottom: 0;
 }
 .header-intro-inner {
