--- a/app/views/neighbourhoods/show.html.haml
+++ b/app/views/neighbourhoods/show.html.haml
@@ -63,7 +63,7 @@
       
      
       -if current_user
-        =link_to "I'd like some help", "/wireframes/need", :class=>"btn call-to-action primary"
+        =link_to "I'd like some help", new_need_path, :class=>"btn call-to-action primary"
       -else              
         =link_to "I'd like some help", '#sign-up-popup', :class=>"btn call-to-action primary", :"data-toggle"=>"modal"
 
