Change text in registration emails

--- a/app/views/user_mailer/new_registration_with_organisation_validation.text.erb
+++ b/app/views/user_mailer/new_registration_with_organisation_validation.text.erb
@@ -4,9 +4,9 @@ Thank you for your interest in <%=Settings.site_name%>! Your support means a lot
 
 You've completed the first stage of registration. We now need to validate your address - after which you will be able to use the full facilities of the site to ask for and offer help to those who live nearby.
 
-You have requested your address validation by post. A letter will soon be sent to your address with an Activation Code in it. Please email that Activation Code to <%=Settings.site_email%> or ring Rose on <%=Settings.rose_phone%> and we will fully activate your account on <%=Settings.site_name%> so that you have access to all the features.
+You have requested your address validation by organisation. We will contact the organisation you selected to see if they can validate your address. If not, a letter will be sent to your address with an Activation Code in it. Please email that Activation Code to <%=Settings.site_email%> or ring Rose on <%=Settings.rose_phone%> and we will fully activate your account on <%=Settings.site_name%> so that you have access to all the features.
 
-PLEASE NOTE: None of your details will be displayed on the site until you ask for or offer help to someone in need. If you ask for help, only those registered neighbours within the "broadcast range" you have specified will see your request. If you offer help, your offer will be sent privately to the person you are offering the help to.
+PLEASE NOTE: None of your details will be displayed on the site until you ask for or offer help to someone in need. If you ask for help, only those registered neighbours within the “broadcast range” you have specified will see your request. If you offer help, your offer will be sent privately to the person you are offering the help to.
 
 <%=Settings.site_name%> is going live at different times in different streets, depending on when there are enough of your neighbours online to help you. Any help you can give by telling your friends and neighbours about <%=Settings.site_name%> will be much appreciated! You can find us on Facebook <%=Settings.facebook_url%> and Twitter <%=Settings.twitter_url%>
 
