--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -91,8 +91,7 @@
                   =link_to "Get involved", "#sign-up-popup", :id=>"cta-3", :class=>"cta-intro cta-small", :"data-toggle"=>"modal"
               
       %ul.unstyled.need-posts
-        -posts = logged_in_as?(@need.user) ? @need.posts.order("created_at DESC") : @need.posts.where(["posts.user_id = ?", current_user.try(:id)])
-        =render(:partial => "needs/post", :collection => posts)
+        =render(:partial => "needs/post", :collection => @need.posts_viewable_by(current_user).order("created_at DESC"))
     .span4
       -if @offers.present?
         %h3.mb1 People offering help
