Change 'validate your membership' to 'address'

--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -43,7 +43,7 @@
           3
         Validate your
         %br
-        membership
+        address
 
     =semantic_form_for(@user, :url => registrations_path, :method => :post, :html => {:class => "loading-text-disabled"})  do |form|
       .tab-content.register-tab-content
