--- a/app/views/registrations/steps/_validate.html.haml
+++ b/app/views/registrations/steps/_validate.html.haml
@@ -13,7 +13,7 @@
       Your safety is important to us. We make sure that everybody on
       %em
         Neighbours Can Help
-      proves their identify to us. You can't use all the facilities on the website until your membership is validated. How would you like to do this?
+      proves their identify to us. You can't use all the facilities on the website until your address is validated. How would you like to do this?
   .validate-your-account
     %h2.mb2.mt2
       Prove your identity
