--- a/app/views/needs/_form.html.haml
+++ b/app/views/needs/_form.html.haml
@@ -8,14 +8,8 @@
   =semantic_form_for @need, :validate => true, :html => { :class => "form-horizontal" }  do |f|
     =hidden_field_tag :return_to
     =f.inputs do
-      -if @need.category
-        =f.hidden_field :category_id, :value => @need.category.id, :id => :category_id_field
-      -else
-        =f.hidden_field :category_id, :id => :category_id_field
-      -if @need.sub_category
-        =f.hidden_field :sub_category_id, :value => @need.sub_category.id, :id => :sub_category_id_field
-      -else
-        =f.hidden_field :sub_category_id, :id => :sub_category_id_field
+      =f.hidden_field :category_id, :value => @need.category.try(:id)
+      =f.hidden_field :sub_category_id, :value => @need.sub_category.try(:id)
       
       =f.input :description, :label => "Add a description", :help => "Describe what you need help with. Be sure to include when you need the help and how flexible you can be.", :input_html => { :class => "span5", :rows => "6" }, :required => false
       =f.input :radius, :as => :select, :collection => need_radius_options, :include_blank => false, :label => "Broadcast radius", :help => "People who live within this distance from you will hear about your need", :input_html => {:class => "span5"}
