--- a/app/views/needs/new.html.haml
+++ b/app/views/needs/new.html.haml
@@ -1,32 +1,22 @@
--content_for :head do
-  :javascript
-    $(document).ready(function(){
-      $('.help-tag').click(function(){
-      	$('.help-tag').removeClass('btn-primary');
-        $(this).addClass('btn-primary');
-      });
-    });
-
 .row.mt-3
   .span12
     %h1 I'd like some help
-  
-.span12.tag-selectors  
-  .tag-selector.tag-selector-row-1.clearfix
-    %h4.mb1
-      Select a category below
-    %ul.help-tags.unstyled
-      -NeedCategory.root.each do |category|
-        %li=link_to(category, '#', :class => "need-category help-tag btn#{@need.category_id == category.id ? ' btn-primary' : ''}", :data => {:category_id => category.id})
+.row
+  .span12.tag-selectors  
+    .tag-selector.tag-selector-row-1.clearfix
+      %h3.mb1
+        Select a category below...
+      %ul.help-tags.unstyled
+        -NeedCategory.root.each do |category|
+          %li=link_to(category, '#', :class => "need-category help-tag btn#{@need.category_id == category.id ? ' btn-primary' : ''}", :data => {:category_id => category.id})
         
-  #need-sub-categories.tag-selector.tag-selector-row-2.clearfix
-    %span.tag-selector-arrow
-    %h3.mb1 More specifically...
-    %ul.help-tags.unstyled
+    #need-sub-categories.tag-selector.tag-selector-row-2.clearfix.hide
+      %span.tag-selector-arrow
+      %h3.mb1 More specifically...
+      %ul.help-tags.unstyled
 
 .row
   %hr
-
   .help-box.span8.offset2
     %h2.mt-3=title 'Add a request for help'
     -if @need.category.present? && @need.category.sub_categories.count.zero?
