--- a/app/views/offers/_form.html.haml
+++ b/app/views/offers/_form.html.haml
@@ -5,7 +5,7 @@
       NewOfferForm.init(#{logged_out? ? 0 : 1});
     });
 .well
-  =semantic_form_for @offer, :validate => true do |f|
+  =semantic_form_for @offer, :validate => true, :class => 'need-offer-form' do |f|
     =hidden_field_tag :return_to
     =f.inputs do
       =f.hidden_field :category_id, :value => @offer.category.try(:id), :id => 'category-id'
