--- a/app/views/offers/thanks.html.haml
+++ b/app/views/offers/thanks.html.haml
@@ -1,6 +1,6 @@
 .span8.offset2
   .well.center
-    %h2="Thanks for offering to help #{current_user.first_name}."
+    %h2="Thanks for offering to help #{current_user.first_name}"
     %p We'll let you know when anyone responds to your help request.
     =link_to "/", :class=>"btn" do
       %i.icon-home
